@@ -109,7 +109,9 @@ AC_CHECK_HEADERS( \
 AC_C_BIGENDIAN
 AC_C_CONST
 AC_TYPE_UID_T
-AC_CHECK_TYPES(socklen_t, [], [], [#include <sys/socket.h>])
+AC_CHECK_TYPES(socklen_t, [], [],
+[#include <sys/types.h>
+#include <sys/socket.h>])
 
 ##
 # Checks for client authentication method.
